# OOP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  student.cpp  student.h
Notifikaattori/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Olio2/: gamenew.cpp  gamenew.h  main.cpp
Olio3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Olio6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Oliovt4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikkotehtava1/: main.cpp
